--- a/PoloSur/PoloSur/nbproject/project.properties
+++ b/PoloSur/PoloSur/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=polosur.PoloSur
+main.class=polosur.MainYConfig
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
