--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@ PoloSur/PoloSur/UltimaSesion.bin
 /IS2Pr4/build/
 /Practica Servlets/IS2Practica5/nbproject/private/
 /Practica Servlets/IS2Practica5/build/
+/Practica Servlets/Servlet1/nbproject/private/
+/Practica Servlets/Servlet1/build/
+Practica Servlets/apache-tomcat-7.0.82/logs/localhost_access_log.2017-11-28.txt
+*.log
+Practica Servlets/apache-tomcat-7.0.82/logs/localhost_access_log.2017-11-28.txt
