--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ PoloSur/PoloSur/UltimaSesion.bin
 Practica Servlets/apache-tomcat-7.0.82/logs/localhost_access_log.2017-11-28.txt
 *.log
 Practica Servlets/apache-tomcat-7.0.82/logs/localhost_access_log.2017-11-28.txt
+*.log
+Practica Servlets/apache-tomcat-7.0.82/logs/catalina.2017-11-28.log
+Practica Servlets/apache-tomcat-7.0.82/logs/localhost_access_log.2017-11-29.txt
